force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__GanttResourceFilters__c.field-meta.xml
<CustomField>
    <fullName>FSL__GanttResourceFilters__c</fullName>
    <description>Lists of selected resource types for filtering the resources that show on the Gantt.</description>
    <label>Gantt Resource Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>