force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__MapDetailsLayer__c.field-meta.xml
<CustomField>
    <fullName>FSL__MapDetailsLayer__c</fullName>
    <description>The last selected Details layer shown on the map</description>
    <label>Map’s Details Layer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>