force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__MapLocationsLayer__c.field-meta.xml
<CustomField>
    <fullName>FSL__MapLocationsLayer__c</fullName>
    <description>The last selected Locations layer shown on the map</description>
    <label>Map’s Locations Layer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>