force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__MapPolygonsLayer__c.field-meta.xml
<CustomField>
    <fullName>FSL__MapPolygonsLayer__c</fullName>
    <description>The last selected Polygons layer shown on the map</description>
    <label>Map’s Polygons Layer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>