force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__MapRoutesLayer__c.field-meta.xml
<CustomField>
    <fullName>FSL__MapRoutesLayer__c</fullName>
    <description>The last selected Routes layer shown on the map</description>
    <label>Map’s Routes Layer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>