force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__MapServiceAppointmentsLayer__c.field-meta.xml
<CustomField>
    <fullName>FSL__MapServiceAppointmentsLayer__c</fullName>
    <description>The last selected Service Appointments layer shown on the map</description>
    <label>Map’s Service Appointments Layer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>