force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__MapServiceResourcesLayer__c.field-meta.xml
<CustomField>
    <fullName>FSL__MapServiceResourcesLayer__c</fullName>
    <description>The last selected Service Resources layer shown on the map</description>
    <label>Map’s Service Resources Layer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>