force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__MapState__c.field-meta.xml
<CustomField>
    <fullName>FSL__MapState__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the map was last open or closed</description>
    <label>Map’s State</label>
    <type>Checkbox</type>
</CustomField>